--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cffi==1.15.1
 charset-normalizer==2.1.0
 click==8.1.3
 commonmark==0.9.1
+coverage==6.4.2
 debugpy==1.6.2
 decorator==5.1.1
 defusedxml==0.7.1
@@ -24,6 +25,7 @@ gitdb==4.0.9
 GitPython==3.1.27
 idna==3.3
 importlib-metadata==4.12.0
+iniconfig==1.1.1
 ipykernel==6.15.1
 ipython==8.4.0
 ipython-genutils==0.2.0
@@ -51,12 +53,14 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
+pluggy==1.0.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.30
 protobuf==3.20.1
 psutil==5.9.1
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
 pyarrow==8.0.0
 pycparser==2.21
 pydeck==0.7.1
@@ -64,6 +68,8 @@ Pygments==2.12.0
 Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pytest==7.1.2
+pytest-cov==3.0.0
 python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
@@ -81,6 +87,7 @@ streamlit==1.11.1
 terminado==0.15.0
 tinycss2==1.1.1
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 tornado==6.2
 traitlets==5.3.0
